--- a/cbcui/ui/Console.ui
+++ b/cbcui/ui/Console.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>Console</class>
- <widget class="QDialog" name="Console" >
-  <property name="geometry" >
+ <widget class="QDialog" name="Console">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,39 +10,39 @@
     <height>240</height>
    </rect>
   </property>
-  <property name="minimumSize" >
+  <property name="minimumSize">
    <size>
     <width>320</width>
     <height>240</height>
    </size>
   </property>
-  <property name="maximumSize" >
+  <property name="maximumSize">
    <size>
     <width>320</width>
     <height>240</height>
    </size>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Chumby Console</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" >
-   <property name="spacing" >
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
     <number>3</number>
    </property>
-   <property name="margin" >
+   <property name="margin">
     <number>5</number>
    </property>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2" >
-     <property name="spacing" >
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <property name="spacing">
       <number>3</number>
      </property>
      <item>
-      <spacer name="horizontalSpacer_4" >
-       <property name="orientation" >
+      <spacer name="horizontalSpacer_4">
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -50,18 +51,18 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_RunButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="ui_RunButton">
+       <property name="text">
         <string>Run</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="horizontalSpacer_5" >
-       <property name="orientation" >
+      <spacer name="horizontalSpacer_5">
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -70,18 +71,18 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_StopButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="ui_StopButton">
+       <property name="text">
         <string>Stop</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="horizontalSpacer_6" >
-       <property name="orientation" >
+      <spacer name="horizontalSpacer_6">
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -90,33 +91,33 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_CloseButton" >
-       <property name="minimumSize" >
+      <widget class="QPushButton" name="ui_CloseButton">
+       <property name="minimumSize">
         <size>
          <width>30</width>
          <height>30</height>
         </size>
        </property>
-       <property name="maximumSize" >
+       <property name="maximumSize">
         <size>
          <width>30</width>
          <height>30</height>
         </size>
        </property>
-       <property name="text" >
+       <property name="text">
         <string/>
        </property>
-       <property name="icon" >
-        <iconset resource="icons/icons.qrc" >
+       <property name="icon">
+        <iconset resource="icons/icons.qrc">
          <normaloff>:/actions/Crystal_Clear_action_button_cancel.png</normaloff>:/actions/Crystal_Clear_action_button_cancel.png</iconset>
        </property>
-       <property name="iconSize" >
+       <property name="iconSize">
         <size>
          <width>30</width>
          <height>30</height>
         </size>
        </property>
-       <property name="flat" >
+       <property name="flat">
         <bool>true</bool>
        </property>
       </widget>
@@ -124,126 +125,126 @@
     </layout>
    </item>
    <item>
-    <widget class="QPlainTextEdit" name="ui_Output" >
-     <property name="font" >
+    <widget class="QPlainTextEdit" name="ui_Output">
+     <property name="font">
       <font>
        <family>Monospace</family>
       </font>
      </property>
-     <property name="plainText" >
+     <property name="plainText">
       <string/>
      </property>
-     <property name="textInteractionFlags" >
+     <property name="textInteractionFlags">
       <set>Qt::NoTextInteraction</set>
      </property>
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout" >
-     <property name="spacing" >
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
       <number>3</number>
      </property>
      <item>
-      <layout class="QGridLayout" name="gridLayout" >
-       <property name="spacing" >
+      <layout class="QGridLayout" name="gridLayout">
+       <property name="spacing">
         <number>3</number>
        </property>
-       <item rowspan="2" row="0" column="0" >
-        <widget class="QPushButton" name="ui_LeftButton" >
-         <property name="minimumSize" >
+       <item row="0" column="0" rowspan="2">
+        <widget class="QPushButton" name="ui_LeftButton">
+         <property name="minimumSize">
           <size>
            <width>30</width>
            <height>30</height>
           </size>
          </property>
-         <property name="maximumSize" >
+         <property name="maximumSize">
           <size>
            <width>30</width>
            <height>30</height>
           </size>
          </property>
-         <property name="baseSize" >
+         <property name="baseSize">
           <size>
            <width>29</width>
            <height>29</height>
           </size>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>L</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="1" >
-        <widget class="QPushButton" name="ui_UpButton" >
-         <property name="minimumSize" >
+       <item row="0" column="1">
+        <widget class="QPushButton" name="ui_UpButton">
+         <property name="minimumSize">
           <size>
            <width>30</width>
            <height>30</height>
           </size>
          </property>
-         <property name="maximumSize" >
+         <property name="maximumSize">
           <size>
            <width>30</width>
            <height>30</height>
           </size>
          </property>
-         <property name="baseSize" >
+         <property name="baseSize">
           <size>
            <width>29</width>
            <height>29</height>
           </size>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>U</string>
          </property>
         </widget>
        </item>
-       <item rowspan="2" row="0" column="2" >
-        <widget class="QPushButton" name="ui_RightButton" >
-         <property name="minimumSize" >
+       <item row="0" column="2" rowspan="2">
+        <widget class="QPushButton" name="ui_RightButton">
+         <property name="minimumSize">
           <size>
            <width>30</width>
            <height>30</height>
           </size>
          </property>
-         <property name="maximumSize" >
+         <property name="maximumSize">
           <size>
            <width>30</width>
            <height>30</height>
           </size>
          </property>
-         <property name="baseSize" >
+         <property name="baseSize">
           <size>
            <width>29</width>
            <height>29</height>
           </size>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>R</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="1" >
-        <widget class="QPushButton" name="ui_DownButton" >
-         <property name="minimumSize" >
+       <item row="1" column="1">
+        <widget class="QPushButton" name="ui_DownButton">
+         <property name="minimumSize">
           <size>
            <width>30</width>
            <height>30</height>
           </size>
          </property>
-         <property name="maximumSize" >
+         <property name="maximumSize">
           <size>
            <width>30</width>
            <height>30</height>
           </size>
          </property>
-         <property name="baseSize" >
+         <property name="baseSize">
           <size>
            <width>29</width>
            <height>29</height>
           </size>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>D</string>
          </property>
         </widget>
@@ -251,11 +252,11 @@
       </layout>
      </item>
      <item>
-      <spacer name="horizontalSpacer" >
-       <property name="orientation" >
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -264,30 +265,30 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_AButton" >
-       <property name="minimumSize" >
+      <widget class="QPushButton" name="ui_AButton">
+       <property name="minimumSize">
         <size>
-         <width>0</width>
-         <height>30</height>
+         <width>45</width>
+         <height>45</height>
         </size>
        </property>
-       <property name="maximumSize" >
+       <property name="maximumSize">
         <size>
-         <width>40</width>
+         <width>55</width>
          <height>16777215</height>
         </size>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>A</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="horizontalSpacer_2" >
-       <property name="orientation" >
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -296,43 +297,30 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_BButton" >
-       <property name="minimumSize" >
+      <widget class="QPushButton" name="ui_BButton">
+       <property name="minimumSize">
         <size>
-         <width>0</width>
-         <height>30</height>
+         <width>45</width>
+         <height>45</height>
         </size>
        </property>
-       <property name="maximumSize" >
+       <property name="maximumSize">
         <size>
-         <width>40</width>
+         <width>55</width>
          <height>16777215</height>
         </size>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>B</string>
        </property>
       </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer_3" >
-       <property name="orientation" >
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0" >
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <resources>
-  <include location="icons/icons.qrc" />
+  <include location="icons/icons.qrc"/>
  </resources>
  <connections>
   <connection>
@@ -341,11 +329,11 @@
    <receiver>Console</receiver>
    <slot>close()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>298</x>
      <y>20</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>159</x>
      <y>119</y>
     </hint>
