--- a/cbcui/ui/Settings.ui
+++ b/cbcui/ui/Settings.ui
@@ -1,136 +1,39 @@
 <ui version="4.0" >
  <class>Settings</class>
- <widget class="QDialog" name="Settings" >
+ <widget class="QWidget" name="Settings" >
   <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
     <width>320</width>
-    <height>240</height>
+    <height>213</height>
    </rect>
   </property>
   <property name="minimumSize" >
    <size>
     <width>320</width>
-    <height>240</height>
+    <height>213</height>
    </size>
   </property>
   <property name="maximumSize" >
    <size>
     <width>320</width>
-    <height>240</height>
+    <height>213</height>
    </size>
   </property>
   <property name="windowTitle" >
-   <string>CBC Settings</string>
+   <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" >
+  <layout class="QHBoxLayout" >
    <item>
-    <spacer name="horizontalSpacer" >
-     <property name="orientation" >
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0" >
-      <size>
-       <width>31</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="ui_enableDownloads" >
+    <widget class="QLabel" name="label" >
      <property name="text" >
-      <string>Enable Program Downloads</string>
-     </property>
-     <property name="checked" >
-      <bool>true</bool>
+      <string>Settings Widget</string>
      </property>
     </widget>
    </item>
-   <item>
-    <spacer name="horizontalSpacer_2" >
-     <property name="orientation" >
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0" >
-      <size>
-       <width>32</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item>
-    <layout class="QVBoxLayout" name="verticalLayout" >
-     <item>
-      <widget class="QPushButton" name="ui_closeButton" >
-       <property name="minimumSize" >
-        <size>
-         <width>30</width>
-         <height>30</height>
-        </size>
-       </property>
-       <property name="maximumSize" >
-        <size>
-         <width>30</width>
-         <height>30</height>
-        </size>
-       </property>
-       <property name="text" >
-        <string/>
-       </property>
-       <property name="icon" >
-        <iconset resource="icons/icons.qrc" >
-         <normaloff>:/actions/Crystal_Clear_action_button_cancel.png</normaloff>:/actions/Crystal_Clear_action_button_cancel.png</iconset>
-       </property>
-       <property name="iconSize" >
-        <size>
-         <width>30</width>
-         <height>30</height>
-        </size>
-       </property>
-       <property name="flat" >
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="verticalSpacer" >
-       <property name="orientation" >
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0" >
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-    </layout>
-   </item>
   </layout>
  </widget>
- <resources>
-  <include location="icons/icons.qrc" />
- </resources>
- <connections>
-  <connection>
-   <sender>ui_closeButton</sender>
-   <signal>clicked()</signal>
-   <receiver>Settings</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>294</x>
-     <y>24</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>159</x>
-     <y>119</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <resources/>
+ <connections/>
 </ui>
