New graph page, and some other small changes

--- a/cbcui/ui/MainMenu.ui
+++ b/cbcui/ui/MainMenu.ui
@@ -39,7 +39,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Cortex?</string>
+        <string>CBC 2</string>
        </property>
       </widget>
      </item>
